allow db config to be populated to the pod
